--- a/dev/assets/styles/styles.css
+++ b/dev/assets/styles/styles.css
@@ -1262,12 +1262,8 @@ a {
   height: 3rem;
   padding: 0 2rem;
   text-decoration: none;
-  font-size: .9rem;
-  letter-spacing: .2px;
-  /*@include mediaquerie('tablet'){
-        font-size: 1rem;
-        height: 3rem;
-    }*/ }
+  font-size: 1rem;
+  letter-spacing: .2px; }
 
 .btn-primary {
     border: solid 1px #60504D;
@@ -1482,7 +1478,7 @@ a {
 
 .museu__triangle--brown {
       background-color: rgba(174, 156, 141, 0.3);
-      top: 8%;
+      top: 12%;
       left: 90%; }
 
 .valencias {
@@ -1491,59 +1487,27 @@ a {
   overflow: hidden; }
 
 .valencias__item {
-    flex: 0 0 50%;
-    position: relative; }
+    width: 50vw;
+    height: 19rem;
+    position: relative;
+    overflow: hidden; }
 
-@media only screen and (min-width: 560px) and (orientation: landscape) {
+@media only screen and (min-width: 1024px) {
       .valencias__item {
-        height: 180px;
-        overflow: hidden; } }
-
-@media only screen and (min-width: 768px) {
-      .valencias__item {
-        height: 220px;
-        overflow: hidden; } }
-
-@media only screen and (max-height: 600px) and (orientation: landscape) {
-      .valencias__item {
-        height: 25rem; } }
-
-.valencias__item:nth-child(3) > .valencias__image,
-    .valencias__item:nth-child(4) > .valencias__image {
-      top: -80%; }
-
-@media only screen and (min-width: 560px) and (orientation: landscape) {
-        .valencias__item:nth-child(3) > .valencias__image,
-        .valencias__item:nth-child(4) > .valencias__image {
-          top: -75%;
-          -webkit-transform: scale(1.25);
-                  transform: scale(1.25); } }
-
-@media only screen and (max-height: 600px) and (orientation: landscape) {
-        .valencias__item:nth-child(3) > .valencias__image,
-        .valencias__item:nth-child(4) > .valencias__image {
-          top: -65%;
-          -webkit-transform: scale(1.2);
-                  transform: scale(1.2); } }
+        width: 25vw; } }
 
 .valencias__image {
     width: 100%;
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-    -webkit-filter: brightness(50%);
-            filter: brightness(50%); }
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+    -webkit-filter: brightness(40%);
+            filter: brightness(40%); }
 
-@media only screen and (min-width: 560px) and (orientation: landscape) {
+@media only screen and (max-width: 380px) {
       .valencias__image {
-        position: absolute;
-        top: -30%; } }
-
-@media only screen and (min-width: 768px) {
-      .valencias__image {
-        position: absolute;
-        top: -40%;
-        -webkit-transform: scale(1);
-                transform: scale(1); } }
+        height: 100%; } }
 
 .valencias__content {
     position: absolute;
@@ -1555,16 +1519,48 @@ a {
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%); }
 
+@media only screen and (min-width: 768px) {
+      .valencias__content {
+        width: 70%; } }
+
+@media only screen and (min-width: 1024px) {
+      .valencias__content {
+        width: 85%; } }
+
 .valencias__icon {
-    height: 3rem; }
+    height: 3rem;
+    margin-bottom: 1rem; }
 
 .valencias__title {
     font-weight: 700;
-    font-size: 1.6rem;
-    margin-bottom: .5rem; }
+    font-size: 1.4rem;
+    margin-bottom: .5rem;
+    letter-spacing: .6px;
+    line-height: 1.3; }
+
+@media only screen and (min-width: 375px) {
+      .valencias__title {
+        font-size: 1.5rem; } }
+
+@media only screen and (min-width: 1024px) {
+      .valencias__title {
+        font-size: 1.4rem; } }
+
+@media only screen and (min-width: 1024px) {
+      .valencias__title {
+        font-weight: 500; } }
 
 .valencias__description {
-    font-size: 1.2rem; }
+    font-size: 1.05rem;
+    letter-spacing: .5px; }
+
+@media only screen and (min-width: 375px) {
+      .valencias__description {
+        font-size: 1.15rem; } }
+
+@media only screen and (min-width: 1024px) {
+      .valencias__description {
+        font-size: 1rem; } }
 
 .megalitismo {
   position: relative;
