--- a/dev/assets/styles/styles.css
+++ b/dev/assets/styles/styles.css
@@ -1006,13 +1006,38 @@ a {
     width: 18rem;
     right: 0;
     top: 3.5rem;
-    z-index: 40; }
+    z-index: 40;
+    /*@include mqlandscapeH('600px') {
+            display: none;
+        }*/
+    /*&__link {
+            &:link,
+            &:visited {
+                display: block;
+                text-decoration: none;
+                color: $white;
+                cursor: pointer;
+                padding-right: 3rem;
+                position: relative;
+                background-image: linear-gradient(45deg, transparent 0%, transparent 50%, rgba($mainNavHover, .7) 50%);
+                background-size: 230%;
+                transition: all .6s;
+
+                @include mediaquerie('desktop') {
+                    padding-right: 4rem;
+                }
+
+                @include mediaquerie('desktop-wide') {
+                    padding-right: 5.6rem;
+                }
+            }
+
+            &:hover {
+                background-position: 100%;
+            }
+        }*/ }
 
 @media only screen and (max-width: 767px) {
-      .navigation__main {
-        display: none; } }
-
-@media only screen and (max-height: 600px) and (orientation: landscape) {
       .navigation__main {
         display: none; } }
 
@@ -1028,8 +1053,8 @@ a {
       width: 100%;
       text-align: right;
       font-size: 2.6rem;
-      line-height: 2;
       top: 5vh;
+      line-height: 1;
       list-style: none; }
 
 @media only screen and (min-width: 1024px) {
@@ -1043,27 +1068,44 @@ a {
 .navigation__main__item {
       width: 100%; }
 
+.navigation__main__item:not(:last-child) {
+        margin-bottom: 2.5rem; }
+
 .navigation__main__link:link, .navigation__main__link:visited {
-      display: block;
       text-decoration: none;
       color: #FFFFFF;
       cursor: pointer;
-      padding-right: 3rem;
+      margin-right: 3rem;
       position: relative;
-      background-image: linear-gradient(45deg, transparent 0%, transparent 50%, rgba(177, 165, 153, 0.7) 50%);
-      background-size: 230%;
-      transition: all .6s; }
+      -webkit-transform: translateY(0%);
+              transform: translateY(0%);
+      transition: all .25s; }
 
 @media only screen and (min-width: 1248px) {
         .navigation__main__link:link, .navigation__main__link:visited {
-          padding-right: 4rem; } }
+          margin-right: 4rem; } }
 
 @media only screen and (min-width: 1440px) {
         .navigation__main__link:link, .navigation__main__link:visited {
-          padding-right: 5.6rem; } }
+          margin-right: 5.6rem; } }
 
 .navigation__main__link:hover {
-      background-position: 100%; }
+      color: #C9AA5D; }
+
+.navigation__main__link::before {
+      content: attr(data-menuitem);
+      white-space: nowrap;
+      position: absolute;
+      bottom: -50%;
+      right: 0;
+      color: rgba(235, 236, 231, 0.075);
+      font-size: 6rem;
+      font-weight: 500;
+      z-index: -1;
+      display: none; }
+
+.navigation__main__link:hover::before {
+      display: block; }
 
 .header {
   width: 100%;
