--- a/dev/assets/styles/styles.css
+++ b/dev/assets/styles/styles.css
@@ -643,7 +643,7 @@ body {
   color: #60504D; }
 
 .paragraph {
-  font-size: 1.3rem;
+  font-size: 1.25rem;
   text-align: justify;
   letter-spacing: .3px; }
 
@@ -1585,7 +1585,7 @@ a {
 
 @media only screen and (min-width: 1024px) {
       .valencias__item {
-        width: 25vw;
+        width: 25%;
         height: 330px; } }
 
 .valencias__image {
@@ -1753,83 +1753,100 @@ a {
       top: -110%;
       left: 80%; } }
 
+.postais {
+  padding-bottom: 3rem;
+  /*&__content {
+        background-color: aqua;
+        padding-left: 10px;
+        padding-right: 10px;
+        position: relative;
+        width: 100%;
+        height: 240.88px;
+    }*/ }
+
+.postais__bottom-nav {
+    font-size: 1.3rem;
+    letter-spacing: .1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem; }
+
 .postais__figure {
-  display: block;
-  width: 100%;
-  position: relative; }
+    display: block;
+    width: 100%;
+    position: relative; }
 
 @media only screen and (min-width: 560px) and (orientation: landscape) {
-    .postais__figure {
-      height: 28.5rem;
-      overflow: hidden; } }
+      .postais__figure {
+        height: 28.5rem;
+        overflow: hidden; } }
 
 @media only screen and (min-width: 1024px) {
-    .postais__figure {
-      height: 42rem; } }
+      .postais__figure {
+        height: 42rem; } }
 
 .postais__figure-image {
-    display: block;
-    width: 100%; }
+      display: block;
+      width: 100%; }
 
 @media only screen and (min-width: 560px) and (orientation: landscape) {
-      .postais__figure-image {
-        position: absolute;
-        bottom: -1rem; } }
+        .postais__figure-image {
+          position: absolute;
+          bottom: -1rem; } }
 
 .postais__figure-title {
-    background-color: rgba(0, 0, 0, 0.2);
-    color: #FFFFFF;
-    font-size: 1.5rem;
-    line-height: 2;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    display: none; }
+      background-color: rgba(0, 0, 0, 0.2);
+      color: #FFFFFF;
+      font-size: 1.5rem;
+      line-height: 2;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      display: none; }
 
 @media only screen and (min-width: 1024px) {
-      .postais__figure-title {
-        font-size: 2.5rem; } }
+        .postais__figure-title {
+          font-size: 2.5rem; } }
 
 .postais__figure-title--show {
-      display: block; }
+        display: block; }
 
 .postais__info {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.7);
-  display: none;
-  color: #FFFFFF; }
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: none;
+    color: #FFFFFF; }
 
 .postais__info--show {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; }
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; }
 
 .postais__heading {
-  font-weight: 700;
-  font-size: 2.2rem; }
+    font-weight: 700;
+    font-size: 2.2rem; }
 
 @media only screen and (min-width: 768px) {
-    .postais__heading {
-      font-size: 3.2rem;
-      letter-spacing: 1px; } }
+      .postais__heading {
+        font-size: 3.2rem;
+        letter-spacing: 1px; } }
 
 @media only screen and (min-width: 1024px) {
-    .postais__heading {
-      font-size: 4rem; } }
+      .postais__heading {
+        font-size: 4rem; } }
 
 .postais__tag {
-  font-weight: 300;
-  font-size: 1.5rem; }
+    font-weight: 300;
+    font-size: 1.5rem; }
 
 @media only screen and (min-width: 768px) {
-    .postais__tag {
-      font-size: 2.5rem; } }
+      .postais__tag {
+        font-size: 2.5rem; } }
 
 .educacao__nav {
   width: 95%;
@@ -2114,7 +2131,14 @@ a {
   /* Center slide text vertically */
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  width: 90%; }
+
+.swiper-slide-active {
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.15);
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+    border-radius: 3px; }
 
 .galeria {
   width: 100%;
